# atlos

./: .gitignore  .npmignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  SECURITY_AUDIT.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: atlos-staging-AutoDeployTrigger-8c3c9720-9541-4bcf-bde7-6afc6a79d6e6.yml  build-and-deploy.yml  build.yml  ci.yaml  deploy-gap.yml  deploy-platform.yml  deploy-prod.yml  deploy-staging-azure.yml  deploy-staging-fly.yml  deploy-staging.yml  deploy.yml  main_atlos-staging.yml  sync-deployments.yml  sync-prod.yml  test.yaml
docs/: README.md  go.mod  go.sum  hugo.yaml  netlify.toml
docs/.github/workflows/: pages.yaml
docs/assets/css/: custom.css
docs/content/docs/: _index.md
docs/data/: icons.yaml
docs/i18n/: en.yaml
landing/: netlify.toml  next.config.js  package-lock.json  package.json  tailwind.config.js  wrangler.toml
landing/pages/: _app.js  index.js
landing/styles/: globals.css
platform/: .formatter.exs  .gitignore  Dockerfile  README.md  fly.backups.toml  fly.bellingcat.toml  fly.logs.toml  fly.prod.toml  fly.staging.toml  fly.toml  media.ex  mix.exs
platform/assets/: package-lock.json  package.json  tailwind.config.js
platform/assets/css/: app.css
platform/assets/js/: app.js  form_warnings.js  infinite_scroll.js  keyboard_form_submit.js  mentions.js  textbox_interactivity.js
platform/config/: appsignal.exs  config.exs  dev.exs  prod.exs  runtime.exs  test.exs
platform/deployments/: .terraform.lock.hcl  README.md  backup_generator.tf  container_app.tf  container_registry.tf  database.tf  fly.backups.toml  fly.db.toml  fly.gap.toml  fly.platform.toml  fly.staging.toml  main.tf  outputs.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
platform/lib/: platform.ex  platform_web.ex  release.ex
platform/lib/platform/: accounts.ex  api.ex  application.ex  auditor.ex  billing.ex  cursor.ex  feature_flags.ex  global_search.ex  invites.ex  mailer.ex  material.ex  notifications.ex  permissions.ex  projects.ex  repo.ex  security.ex  types.ex  updates.ex  uploads.ex  utils.ex
platform/lib/platform_web/: components.ex  endpoint.ex  errors.ex  formatter.ex  gettext.ex  router.ex  telemetry.ex
platform/priv/repo/: seeds.exs
platform/priv/static/: .gitignore
platform/rel/: env.sh.eex
platform/scripts/: export_project.py  requirements.txt
platform/test/: test_helper.exs
platform/test/platform/: accounts_test.exs  api_test.exs  duplicates_test.exs  invites_test.exs  material_test.exs  notifications_test.exs  permissions_test.exs  projects_test.exs  security_test.exs  updates_test.exs
platform/test/support/: conn_case.ex  (+2 more)
platform/utils/: .gitignore  README.md  archive.py  civharm_converter.py  pyproject.toml  timeout.py
policy/: PRIVACY_POLICY.md  README.md  RESILIENCE.md  ROLES.md  RULES.md  TERMS_OF_USE.md
utils/: .gitignore  README.md  archive.py  auto_archiver_config.yaml  civharm_converter.py  pyproject.toml
(+322 files in other folders)
