[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["R. Miles McCain <github@sendmiles.email>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
unicodecsv = "^0.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
