[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["R. Miles McCain <github@sendmiles.email>"]

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
click = "^8.1.3"
unicodecsv = "^0.14.1"
python-dateutil = "^2.9.0"
Perception = "^0.6.8"
loguru = "^0.7.0"
auto-archiver = "^0.11.6"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
selenium = "^4.23.1"
webdriver-manager = "^4.0.2"
# We do not actually depend on the following dependencies directly, but they are necessary for dependency resolution
botocore = "^1.34.108"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
